more work on cleaning up modules; add slip ratio output to debug module

--- a/GameData/KSPWheel/Patches/Stock/Stock-wheels.cfg
+++ b/GameData/KSPWheel/Patches/Stock/Stock-wheels.cfg
@@ -21,7 +21,7 @@
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.1939
 		wheelRadius = 0.1575
-		wheelMass = 0.040
+		wheelMass = 0.030
 		suspensionTravel = 0.195
 		suspensionTarget = 0.5
 		loadRating = 0.1
@@ -53,9 +53,10 @@
 	MODULE
 	{
 		name = KSPWheelMotor
-		maxMotorTorque = 0.5
+		maxMotorTorque = 0.25
 		resourceAmount = 0.25
 		throttleResponse = 2
+		maxRPM = 360
 	}
 	MODULE
 	{
@@ -101,7 +102,7 @@
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.25
 		wheelRadius = 0.379
-		wheelMass = 0.40
+		wheelMass = 0.04
 		suspensionTravel = 0.25
 		suspensionTarget = 0.5
 		loadRating = 1.25
@@ -133,7 +134,7 @@
 	MODULE
 	{
 		name = KSPWheelMotor
-		maxMotorTorque = 10
+		maxMotorTorque = 5
 		resourceAmount = 0.25
 		throttleResponse = 2
 	}
@@ -180,7 +181,7 @@ roverWheelTR-2L - truck wheels
 		wheelColliderName = WheelCollider
 		wheelColliderOffset = 0.125
 		wheelRadius = 0.58
-		wheelMass = 0.040
+		wheelMass = 0.07
 		suspensionTravel = 0.125
 		suspensionTarget = 0.5
 		loadRating = 1.5
@@ -212,7 +213,7 @@ roverWheelTR-2L - truck wheels
 	MODULE
 	{
 		name = KSPWheelMotor
-		maxMotorTorque = 58
+		maxMotorTorque = 20
 		resourceAmount = 0.25
 		throttleResponse = 2
 	}
