--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMole.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMole.cfg
@@ -12,6 +12,39 @@
 	-MODULE[ModulePropeller]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
+	
+	@EFFECTS,*
+	{
+		LatSlipEffect
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = KerbalFoundries/Sounds/TyreSqueal
+				volume = 0.0 0.0
+				volume = 0.1 0.2
+				volume = 1.0 1.0
+				pitch = 0.0 0.1
+				pitch = 1.0 0.6
+				loop = true
+			}
+		}
+		LongSlipEffect
+		{
+			AUDIO
+			{
+				channel = Ship
+				clip = KerbalFoundries/Sounds/TyreSqueal
+				volume = 0.0 0.0
+				volume = 0.1 0.2
+				volume = 1.0 1.0
+				pitch = 0.0 0.1
+				pitch = 1.0 0.6
+				loop = true
+			}
+		}
+	}
+	
 	@MODULE[TweakScale]
 	{
 		@type = KSPWheelTrackLarge
@@ -134,6 +167,14 @@
 		manageMotor = true
 		manageBrakes = true
 		averageRPM = true
+	}
+	MODULE
+	{
+		name = KSPWheelSounds
+		wheelIndex = 2
+		motorEffect = WheelEffect
+		latSlipEffect = LatSlipEffect
+		longSlipEffect = LongSlipEffect
 	}
 	MODULE
 	{
