--- a/UnityProject/UnityProject.CSharp.csproj
+++ b/UnityProject/UnityProject.CSharp.csproj
@@ -52,17 +52,11 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Advertisements">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Analytics">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Analytics.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
@@ -77,6 +71,7 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\KSPFrictionCurve.cs" />
     <Compile Include="Assets\Scripts\KSPWheelCollider.cs" />
+    <Compile Include="Assets\Scripts\KSPWheelColliderFeedback.cs" />
     <Compile Include="Assets\Scripts\KSPWheelComponent.cs" />
     <Compile Include="Assets\Scripts\KSPWheelConstraint.cs" />
     <Compile Include="Assets\Scripts\KSPWheelFrictionCurve.cs" />
