--- a/UnityProject/UnityProject.CSharp.csproj
+++ b/UnityProject/UnityProject.CSharp.csproj
@@ -52,11 +52,17 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
+    <Reference Include="UnityEngine.Advertisements">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.Networking">
       <HintPath>Library\UnityAssemblies\UnityEngine.Networking.dll</HintPath>
+    </Reference>
+    <Reference Include="UnityEngine.Analytics">
+      <HintPath>Library\UnityAssemblies\UnityEngine.Analytics.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
@@ -71,12 +77,8 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\KSPFrictionCurve.cs" />
     <Compile Include="Assets\Scripts\KSPWheelCollider.cs" />
-    <Compile Include="Assets\Scripts\KSPWheelColliderFeedback.cs" />
     <Compile Include="Assets\Scripts\KSPWheelComponent.cs" />
-    <Compile Include="Assets\Scripts\KSPWheelConstraint.cs" />
     <Compile Include="Assets\Scripts\KSPWheelFrictionCurve.cs" />
-    <Compile Include="Assets\Scripts\KSPWheelStickyConstraint.cs" />
-    <Compile Include="Assets\Scripts\LFWheelGrip.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\Terrain\GrassTextures\license.txt" />
