add deploy sounds to stock landing gear

--- a/GameData/KSPWheel/Patches/Stock/Stock-gear.cfg
+++ b/GameData/KSPWheel/Patches/Stock/Stock-gear.cfg
@@ -199,6 +199,10 @@
 		animationName = LandingGearSmallDeploy
 		tempColliderName = deployTgt
 		tempColliderOffset = 0.10
+		retractEffect = retract
+		retractedEffect = retracted
+		deployEffect = deploy
+		deployedEffect = deployed
 	}
 	MODULE
 	{
@@ -277,6 +281,10 @@
 		animationName = LandingGearMediumDeploy
 		tempColliderName = deployTgt
 		tempColliderOffset = 0.275
+		retractEffect = retract
+		retractedEffect = retracted
+		deployEffect = deploy
+		deployedEffect = deployed
 	}
 	MODULE
 	{
@@ -353,6 +361,10 @@
 		animationName = LandingGearLargeDeploy
 		tempColliderName = deployTgt
 		tempColliderOffset = -0.25
+		retractEffect = retract
+		retractedEffect = retracted
+		deployEffect = deploy
+		deployedEffect = deployed
 	}
 	MODULE
 	{
@@ -444,6 +456,10 @@
 		animationName = LandingGearExtraLargeDeploy2
 		tempColliderName = deployTgt
 		tempColliderOffset = 0
+		retractEffect = retract
+		retractedEffect = retracted
+		deployEffect = deploy
+		deployedEffect = deployed
 	}
 	MODULE
 	{
