add deploy sounds to stock landing legs and begin working on fixing the scaling/offset issues

--- a/GameData/KSPWheel/Patches/Stock/Stock-legs.cfg
+++ b/GameData/KSPWheel/Patches/Stock/Stock-legs.cfg
@@ -24,8 +24,6 @@
 		wheelMass = 0.20
 		suspensionTravel = 0.75
 		suspensionTarget = 0.2
-		suspensionSpring = 100
-		suspensionDamper = 20
 		loadRating = 0.5
 		minLoadRating = 0.1
 		maxLoadRating = 1
@@ -50,6 +48,10 @@
 	{
 		name = KSPWheelDeployment
 		animationName = probeleg
+		retractEffect = retract
+		retractedEffect = retracted
+		deployEffect = deploy
+		deployedEffect = deployed
 	}
 	MODULE
 	{
@@ -62,6 +64,8 @@
 	}
 }
 
+//no 'scale' listed, default=1?
+//has rescaleFactor = 1.25
 //LT-01 -- 'medium'
 +PART[landingLeg1]
 {
@@ -84,13 +88,11 @@
 	{
 		name = KSPWheelBase
 		wheelColliderName = wheelCollider
-		wheelColliderOffset = -0.05
-		wheelRadius = 0.104
+		wheelColliderOffset = 0
+		wheelRadius = 0.09
 		wheelMass = 0.04
-		suspensionTravel = 0.90
+		suspensionTravel = 0.75
 		suspensionTarget = 0.2
-		suspensionSpring = 100
-		suspensionDamper = 20
 		loadRating = 1.5
 		minLoadRating = 0.5
 		maxLoadRating = 5
@@ -115,6 +117,10 @@
 	{
 		name = KSPWheelDeployment
 		animationName = Deploy
+		retractEffect = retract
+		retractedEffect = retracted
+		deployEffect = deploy
+		deployedEffect = deployed
 	}
 	MODULE
 	{
@@ -159,13 +165,11 @@
 	{
 		name = KSPWheelBase
 		wheelColliderName = wheelCollider
-		wheelColliderOffset = 0
-		wheelRadius = 0.15
+		wheelColliderOffset = -0.16
+		wheelRadius = 0.12
 		wheelMass = 0.04
-		suspensionTravel = 0.9
+		suspensionTravel = 0.75
 		suspensionTarget = 0.2
-		suspensionSpring = 100
-		suspensionDamper = 20
 		loadRating = 5
 		minLoadRating = 1.0
 		maxLoadRating = 12.0
@@ -175,7 +179,7 @@
 	{
 		name = KSPWheelSuspension
 		suspensionName = piston
-		suspensionOffset = -0.25
+		suspensionOffset = 0
 		suspensionAxis = 0, 0, -1
 		allowLockedSuspension = true
 	}
@@ -190,6 +194,10 @@
 	{
 		name = KSPWheelDeployment
 		animationName = newlandingleg
+		retractEffect = retract
+		retractedEffect = retracted
+		deployEffect = deploy
+		deployedEffect = deployed
 	}
 	MODULE
 	{
