disable stock patches, update KF patches to update modules on existing parts instead of clone+rename

--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-RepulsorGimbal.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-RepulsorGimbal.cfg
@@ -1,7 +1,5 @@
-+PART[KF_RepulsorGimbal]
+@PART[KF_RepulsorGimbal]
 {
-	@name = KSPW-KF_RepulsorGimbal
-	@title = KSPWheels KF_RepulsorGimbal
 	-MODULE[KFRepulsor]{}
 	-MODULE[TextureAnimateGeneric]{}
 	-MODULE[KFWheel]{}
