--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-RepulsorSurface.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-RepulsorSurface.cfg
@@ -1,7 +1,5 @@
-+PART[KF_RepulsorSurface]
+@PART[KF_RepulsorSurface]
 {
-	@name = KSPW-KF_RepulsorSurface
-	@title = KSPWheels KF_RepulsorSurface
 	-MODULE[KFRepulsor]{}
 	-MODULE[TextureAnimateGeneric]{}
 	-MODULE[KFWheel]{}
