--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-Screw.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-Screw.cfg
@@ -1,7 +1,5 @@
-+PART[KF_ScrewDrive]
+@PART[KF_ScrewDrive]
 {
-	@name = KSPW-KF_ScrewDrive-L
-	@title = KSPWheels KF_ScrewDrive-L
 	-MODULE[KFModuleMirror]{}
 	-MODULE[KFModuleWheel]{}
 	-MODULE[KFWheel]{}
