--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-Skid.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-Skid.cfg
@@ -1,7 +1,5 @@
-+PART[KF_Skid]
+@PART[KF_Skid]
 {
-	@name = KSPW-KF_Skid
-	@title = KSPWheels KF_Skid
 	-MODULE[KFSteering]{}
 	-MODULE[KFModuleWheel]{}
 	-MODULE[KFWheel]{}
