--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackInverting.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackInverting.cfg
@@ -1,7 +1,5 @@
-+PART[KF_TrackRBIInverting]
+@PART[KF_TrackRBIInverting]
 {
-	@name = KSPW-KF_TrackRBIInverting
-	@title = KSPWheels KF_TrackRBIInverting
 	-MODULE[KFModuleWheel]{}
 	-MODULE[KFTrackSurface]{}
 	-MODULE[KFSuspension]{}
