--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackLong.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackLong.cfg
@@ -1,7 +1,5 @@
-+PART[KF_TrackLong]
+@PART[KF_TrackLong]
 {
-	@name = KSPW-KF_TrackLong
-	@title = KSPWheels KF_TrackLong
 	-MODULE[KFModuleMirror]{}
 	-MODULE[KFModuleWheel]{}
 	-MODULE[KFTrackSurface]{}
