--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMedium.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMedium.cfg
@@ -1,7 +1,5 @@
-+PART[KF_TrackMedium]
+@PART[KF_TrackMedium]
 {
-	@name = KSPW-KF_TrackMedium
-	@title = KSPWheels KF_TrackMedium
 	-MODULE[OrientationMarker]{}
 	-MODULE[KFModuleWheel]{}
 	-MODULE[KFTrackSurface]{}
