--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMole.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMole.cfg
@@ -1,7 +1,5 @@
-+PART[KF_TrackRBIMole]
+@PART[KF_TrackRBIMole]
 {
-	@name = KSPW-KF_TrackRBIMole
-	@title = KSPWheels KF_TrackRBIMole
 	-MODULE[KFModuleWheel]{}
 	-MODULE[KFTrackSurface]{}
 	-MODULE[KFSuspension]{}
