--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSimple.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSimple.cfg
@@ -1,7 +1,5 @@
-+PART[KF_TrackS]
+@PART[KF_TrackS]
 {
-	@name = KSPW-KF_TrackS-L
-	@title = KSPWheels KF_TrackS-L
 	-MODULE[KFModuleMirror]{}
 	-MODULE[KFModuleWheel]{}
 	-MODULE[KFTrackSurface]{}
