--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSmall.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSmall.cfg
@@ -1,7 +1,5 @@
-+PART[KF_TrackSmall]
+@PART[KF_TrackSmall]
 {
-	@name = KSPW-KF_TrackSmall
-	@title = KSPWheels KF_TrackSmall
 	-MODULE[OrientationMarker]{}
 	-MODULE[KFModuleWheel]{}
 	-MODULE[KFTrackSurface]{}
