--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSurface.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSurface.cfg
@@ -1,7 +1,5 @@
-+PART[KF_SurfaceTrack]
+@PART[KF_SurfaceTrack]
 {
-	@name = KSPW-KF_SurfaceTrack
-	@title = KSPWheels KF_SurfaceTrack
 	-MODULE[KFSteering]{}
 	-MODULE[KFModuleWheel]{}
 	-MODULE[KFTrackSurface]{}
