--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackTiny.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackTiny.cfg
@@ -1,7 +1,5 @@
-+PART[KF_TrackRBITiny]
+@PART[KF_TrackRBITiny]
 {
-	@name = KSPW-KF_TrackRBITiny
-	@title = KSPWheels KF_TrackRBITiny
 	-MODULE[KFModuleWheel]{}
 	-MODULE[KFTrackSurface]{}
 	-MODULE[KFSuspension]{}
