--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelLarge.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelLarge.cfg
@@ -1,7 +1,5 @@
-+PART[KF_WheelLarge]
+@PART[KF_WheelLarge]
 {
-	@name = KSPW-KF_WheelLarge
-	@title = KSPWheels KF_WheelLarge
 	-MODULE[OrientationMarker]{}
 	-MODULE[KFModuleWheel]{}
 	-MODULE[KFWheel]{}
