--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelMedium.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelMedium.cfg
@@ -1,7 +1,5 @@
-+PART[KF_WheelMedium]
+@PART[KF_WheelMedium]
 {
-	@name = KSPW-KF_WheelMedium
-	@title = KSPWheels KF_WheelMedium
 	-MODULE[ObjectDestroy]{}
 	-MODULE[KFModuleWheel]{}
 	-MODULE[KFWheel]{}
