--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelSmall.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelSmall.cfg
@@ -1,7 +1,5 @@
-+PART[KF_WheelSmall]
+@PART[KF_WheelSmall]
 {
-	@name = KSPW-KF_WheelSmall
-	@title = KSPWheels KF_WheelSmall
 	-MODULE[OrientationMarker]{}
 	-MODULE[KFModuleWheel]{}
 	-MODULE[KFWheel]{}
