--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelTiny.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelTiny.cfg
@@ -1,7 +1,5 @@
-+PART[KF_WheelTiny]
+@PART[KF_WheelTiny]
 {
-	@name = KSPW-KF_WheelTiny
-	@title = KSPWheels KF_WheelTiny
 	-MODULE[OrientationMarker]{}
 	-MODULE[KFModuleWheel]{}
 	-MODULE[KFWheel]{}
