--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-Repulsor.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-Repulsor.cfg
@@ -1,7 +1,5 @@
-+PART[KF_Repulsor]
+@PART[KF_Repulsor]
 {
-	@name = KSPW-KF_Repulsor
-	@title = KSPWheels KF_Repulsor
 	-MODULE[KFRepulsor]{}
 	-MODULE[TextureAnimateGeneric]{}
 	-MODULE[KFWheel]{}
