--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSimple.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSimple.cfg
@@ -193,24 +193,22 @@
 	}
 }
 
-
-
 +PART[KF_TrackS]
 {
-	@name = KSPW-KF_TrackS-R
-	@title = KSPWheels KF_TrackS-R
-	-MODULE[KFModuleMirror]{}
-	-MODULE[KFModuleWheel]{}
-	-MODULE[KFTrackSurface]{}
-	-MODULE[KFSuspension]{}
-	-MODULE[KFSuspension]{}
-	-MODULE[KFSuspension]{}
-	-MODULE[KFSuspension]{}
-	-MODULE[KFSuspension]{}
-	-MODULE[KFWheel]{}
-	-MODULE[KFConstrain]{}
-	-MODULE[KFDustFX]{}
-	-MODULE[KFPrecisionMode]{}
+	-MODULE[FXModuleConstrainPosition]{}
+	-MODULE[KSPWheelBase]{}
+	-MODULE[KSPWheelRotation]{}
+	-MODULE[KSPWheelSuspension]{}
+	-MODULE[KSPWheelSuspension]{}
+	-MODULE[KSPWheelSuspension]{}
+	-MODULE[KSPWheelSuspension]{}
+	-MODULE[KSPWheelSuspension]{}
+	-MODULE[KSPWheelMotor]{}
+	-MODULE[KSPWheelBrakes]{}
+	-MODULE[KSPWheelDamage]{}
+	-MODULE[KSPWheelTracks]{}
+	-MODULE[KSPWheelTransformRemoval]{}
+	-MODULE[KSPWheelDebug]{}
 		
 	MODULE
 	{
