* initial work on auto-tune suspension and GUI control cleanup * Need to add gui callback functions to abstract submodule that the base module can call whenever its gui toggle is updated

--- a/VSProject/KSPWheel/KSPWheel.csproj
+++ b/VSProject/KSPWheel/KSPWheel.csproj
@@ -64,6 +64,7 @@
     <Compile Include="PartModules\KSPWheelAnimationState.cs" />
     <Compile Include="PartModules\KSPWheelRepulsor.cs" />
     <Compile Include="PartModules\KSPWheelRotation.cs" />
+    <Compile Include="PartModules\KSPWheelSettings.cs" />
     <Compile Include="PartModules\KSPWheelSounds.cs" />
     <Compile Include="PartModules\KSPWheelState.cs" />
     <Compile Include="PartModules\KSPWheelSteering.cs" />
