* initial implementation of updated motor mechanics.   * Need to verify that everything else still functions as intended after changes to submodule init (no longer fires on prefab/OnLoad)

--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelLarge.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelLarge.cfg
@@ -48,10 +48,10 @@
 	MODULE
 	{
 		name = KSPWheelMotor
-		maxMotorTorque = 0.5
-		resourceAmount = 0.25
-		throttleResponse = 2
-		maxRPM = 250
+		maxMotorTorque = 5
+		motorPower = 1
+		maxRPM = 2500
+		gearRatio = 4
 	}
 	MODULE
 	{
