convert KF part configs to use updated tracks module definition (may need brakes module to be moved before the tracks module...) remove tracks module from KF tiny wheel, add second brake and motor modules in its place

--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelTiny.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelTiny.cfg
@@ -79,15 +79,25 @@
 	}
 	MODULE
 	{
-		name = KSPWheelTracks
-		manageMotor = true
-		manageBrakes = true
-		averageRPM = true
+		name = KSPWheelMotor
+		wheelIndex = 1
+		maxMotorTorque = 1
+		resourceAmount = 0.25
+		throttleResponse = 2
+		maxRPM = 800
+		tankSteering = true
 	}
 	MODULE
 	{
 		name = KSPWheelBrakes
 		wheelIndex = 0
+		maxBrakeTorque = 80
+		brakeResponse = 2
+	}
+	MODULE
+	{
+		name = KSPWheelBrakes
+		wheelIndex = 1
 		maxBrakeTorque = 80
 		brakeResponse = 2
 	}
