minor updates to part config

--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelMedium.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelMedium.cfg
@@ -48,10 +48,10 @@
 	MODULE
 	{
 		name = KSPWheelMotor
-		maxMotorTorque = 1
-		resourceAmount = 0.25
-		throttleResponse = 2
-		maxRPM = 425
+		maxMotorTorque = 3.25
+		motorPower = 1
+		maxRPM = 2500
+		gearRatio = 8
 	}
 	MODULE
 	{
