add rolling and rotational resistance config values to KSPWheelBase set repulsor rolling resistance to zero

--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-RepulsorSurface.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-RepulsorSurface.cfg
@@ -19,6 +19,7 @@
 		suspensionTravel = 0.75
 		suspensionTarget = 0.25
 		frictionMult = 0
+		rollingResistance = 0
 		boundsColliderName = Bounds
 		loadRating = 2
 		minLoadRating = 0.5
