major part balance cleanup

--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-RepulsorSurface.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-RepulsorSurface.cfg
@@ -4,11 +4,7 @@
 	-MODULE[TextureAnimateGeneric]{}
 	-MODULE[KFWheel]{}
 	-MODULE[KFDustFX]{}
-	@MODULE[TweakScale]
-	{
-		@type = KSPWheelRepulsor
-	}
-	
+	-MODULE[TweakScale]{}	
 	MODULE
 	{
 		name = KSPWheelBase
@@ -20,22 +16,14 @@
 		suspensionTarget = 0.25
 		frictionMult = 0
 		rollingResistance = 0
+		maxSpeed = 1000
 		boundsColliderName = Bounds
 		loadRating = 2
 		minLoadRating = 0.5
-		maxLoadRating = 10
+		maxLoadRating = 3
 	}
 	MODULE
 	{
 		name = KSPWheelRepulsor
-	}
-	MODULE
-	{
-		name = KSPWheelDamage
-		impactTolerance = 100
-	}
-	MODULE
-	{
-		name = KSPWheelDebug
 	}
 }
