--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-Screw.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-Screw.cfg
@@ -6,10 +6,7 @@
 	-MODULE[ModulePropeller]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
-	@MODULE[TweakScale]
-	{
-		@type = KSPWheelTrackMedium
-	}
+	-MODULE[TweakScale]{}
 	
 	MODULE
 	{
@@ -72,9 +69,10 @@
 		}
 		suspensionTarget = 0.5
 		boundsColliderName = Bounds
-		loadRating = 0.1
-		minLoadRating = 0.1
-		maxLoadRating = 10
+		loadRating = 10
+		minLoadRating = 1
+		maxLoadRating = 25
+		maxSpeed = 23.5
 	}
 	MODULE
 	{
@@ -86,11 +84,11 @@
 	{
 		name = KSPWheelTracks
 		wheelIndex = 3
-		maxMotorTorque = 0.10
-		resourceAmount = 0.25
-		throttleResponse = 2
-		tankSteering = true
-		maxRPM = 1000
+		maxMotorTorque = 16.8
+		motorPower = 3.2
+		maxRPM = 600
+		gearRatio = 1
+		tankSteering = true		
 	}
 	MODULE
 	{
@@ -106,17 +104,12 @@
 			when = 1
 		}
 	}
-	MODULE
-	{
-		name = KSPWheelDebug
-		wheelIndex = 0
-	}
 }
 
-+PART[KSPW-KF_ScrewDrive-L]
++PART[KF_ScrewDrive]
 {
-	@name = KSPW-KF_ScrewDrive-R
-	@title = KSPWheels KF_ScrewDrive-R
+	@name = KF_ScrewDrive-R
+	@title = KF_ScrewDrive-R
 	-MODULE[KSPWheelRotation]{}
 	-MODULE[KSPWheelTransformRemoval]{}
 	MODULE
