--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackInverting.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackInverting.cfg
@@ -13,10 +13,7 @@
 	-MODULE[KFWheel]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
-	@MODULE[TweakScale]
-	{
-		@type = KSPWheelTrackMedium
-	}
+	-MODULE[TweakScale]{}
 	
 	MODULE
 	{
@@ -107,9 +104,10 @@
 		}
 		suspensionTarget = 0.5
 		boundsColliderName = Bounds
-		loadRating = 0.1
-		minLoadRating = 0.1
-		maxLoadRating = 5
+		loadRating = 3
+		minLoadRating = 0.5
+		maxLoadRating = 12
+		maxSpeed = 23.5
 	}
 	MODULE
 	{
@@ -176,21 +174,16 @@
 	{
 		name = KSPWheelTracks
 		wheelIndex = 0
-		maxMotorTorque = 0.10
-		resourceAmount = 0.25
-		throttleResponse = 2
+		motorPower = 1.5
+		maxMotorTorque = 15
+		maxRPM = 900
+		gearRatio = 1
 		tankSteering = true
-		maxRPM = 1200
 		trackLength = 14
 	}
 	MODULE
 	{
 		name = KSPWheelDamage
 		impactTolerance = 100
-	}
-	MODULE
-	{
-		name = KSPWheelDebug
-		wheelIndex = 0
 	}
 }
