--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackLong.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackLong.cfg
@@ -13,10 +13,7 @@
 	-MODULE[KFWheel]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
-	@MODULE[TweakScale]
-	{
-		@type = KSPWheelTrackMedium
-	}
+	-MODULE[TweakScale]{}
 	
 	MODULE
 	{
@@ -86,9 +83,10 @@
 		}
 		suspensionTarget = 0.5
 		boundsColliderName = Bounds
-		loadRating = 0.1
-		minLoadRating = 0.1
-		maxLoadRating = 2.5
+		loadRating = 4
+		minLoadRating = 0.5
+		maxLoadRating = 14
+		maxSpeed = 23.5
 	}
 	MODULE
 	{
@@ -149,11 +147,11 @@
 	{
 		name = KSPWheelTracks
 		wheelIndex = 1
-		maxMotorTorque = 0.10
-		resourceAmount = 0.25
-		throttleResponse = 2
+		motorPower = 1.75
+		maxMotorTorque = 17.5
+		maxRPM = 900
+		gearRatio = 1
 		tankSteering = true
-		maxRPM = 600
 		trackLength = 7
 	}
 	MODULE
@@ -169,10 +167,5 @@
 			name = LookAtMasterR
 			when = 1
 		}
-	}
-	MODULE
-	{
-		name = KSPWheelDebug
-		wheelIndex = 0
 	}
 }
