--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMedium.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMedium.cfg
@@ -9,10 +9,7 @@
 	-MODULE[KFWheel]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
-	@MODULE[TweakScale]
-	{
-		@type = KSPWheelTrackMedium
-	}
+	-MODULE[TweakScale]{}
 	
 	MODULE
 	{
@@ -54,9 +51,10 @@
 		}
 		suspensionTarget = 0.5
 		boundsColliderName = Bounds
-		loadRating = 1
+		loadRating = 2.5
 		minLoadRating = 0.1
-		maxLoadRating = 5
+		maxLoadRating = 8
+		maxSpeed = 23.5
 	}
 	MODULE
 	{
@@ -93,19 +91,15 @@
 	{
 		name = KSPWheelTracks
 		wheelIndex = 2
-		maxMotorTorque = 0.10
-		resourceAmount = 0.25
-		throttleResponse = 2
+		maxMotorTorque = 12
+		motorPower = 1
+		gearRatio = 1
+		maxRPM = 750
 		tankSteering = true
 	}
 	MODULE
 	{
 		name = KSPWheelDamage
 		impactTolerance = 100
-	}
-	MODULE
-	{
-		name = KSPWheelDebug
-		wheelIndex = 2
 	}
 }
