--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMole.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackMole.cfg
@@ -10,43 +10,39 @@
 	-MODULE[ModulePropeller]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
+	-MODULE[TweakScale]{}
 	
-	@EFFECTS,*
-	{
-		LatSlipEffect
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = KerbalFoundries/Sounds/TyreSqueal
-				volume = 0.0 0.0
-				volume = 0.1 0.2
-				volume = 1.0 1.0
-				pitch = 0.0 0.1
-				pitch = 1.0 0.6
-				loop = true
-			}
-		}
-		LongSlipEffect
-		{
-			AUDIO
-			{
-				channel = Ship
-				clip = KerbalFoundries/Sounds/TyreSqueal
-				volume = 0.0 0.0
-				volume = 0.1 0.2
-				volume = 1.0 1.0
-				pitch = 0.0 0.1
-				pitch = 1.0 0.6
-				loop = true
-			}
-		}
-	}
-	
-	@MODULE[TweakScale]
-	{
-		@type = KSPWheelTrackLarge
-	}
+	// @EFFECTS,*
+	// {
+		// LatSlipEffect
+		// {
+			// AUDIO
+			// {
+				// channel = Ship
+				// clip = KerbalFoundries/Sounds/TyreSqueal
+				// volume = 0.0 0.0
+				// volume = 0.1 0.2
+				// volume = 1.0 1.0
+				// pitch = 0.0 0.1
+				// pitch = 1.0 0.6
+				// loop = true
+			// }
+		// }
+		// LongSlipEffect
+		// {
+			// AUDIO
+			// {
+				// channel = Ship
+				// clip = KerbalFoundries/Sounds/TyreSqueal
+				// volume = 0.0 0.0
+				// volume = 0.1 0.2
+				// volume = 1.0 1.0
+				// pitch = 0.0 0.1
+				// pitch = 1.0 0.6
+				// loop = true
+			// }
+		// }
+	// }
 	
 	MODULE
 	{
@@ -101,9 +97,10 @@
 		}
 		suspensionTarget = 0.5
 		boundsColliderName = Bounds
-		loadRating = 3
+		loadRating = 20
 		minLoadRating = 1
-		maxLoadRating = 20
+		maxLoadRating = 80
+		maxSpeed = 23.5
 	}
 	MODULE
 	{
@@ -149,10 +146,13 @@
 	{
 		name = KSPWheelTracks
 		wheelIndex = 2
-		maxMotorTorque = 120
-		resourceAmount = 0.25
+		maxMotorTorque = 520
+		motorPower = 10
+		gearRatio = 1
+		maxRPM = 175
 		tankSteering = true
-		maxRPM = 200
+		trackDir = 1
+		trackLength = 10
 	}
 	MODULE
 	{
@@ -164,13 +164,8 @@
 		name = KSPWheelSounds
 		wheelIndex = 2
 		motorEffect = WheelEffect
-		latSlipEffect = LatSlipEffect
-		longSlipEffect = LongSlipEffect
-	}
-	MODULE
-	{
-		name = KSPWheelDebug
-		wheelIndex = 2
+		// latSlipEffect = LatSlipEffect
+		// longSlipEffect = LongSlipEffect
 	}
 }
 
