--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSmall.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSmall.cfg
@@ -10,10 +10,7 @@
 	-MODULE[KFWheel]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
-	@MODULE[TweakScale]
-	{
-		@type = KSPWheelTrackSmall
-	}
+	-MODULE[TweakScale]{}
 	
 	MODULE
 	{
@@ -68,9 +65,10 @@
 		}
 		suspensionTarget = 0.24
 		boundsColliderName = Bounds
-		loadRating = 0.1
+		loadRating = 1
 		minLoadRating = 0.1
-		maxLoadRating = 5
+		maxLoadRating = 3
+		maxSpeed = 23.5
 	}
 	MODULE
 	{
@@ -117,11 +115,11 @@
 	{
 		name = KSPWheelTracks
 		wheelIndex = 0
-		maxMotorTorque = 0.10
-		resourceAmount = 0.25
-		throttleResponse = 2
+		motorPower = 0.222
+		maxMotorTorque = 1.26
+		maxRPM = 1600
+		gearRatio = 1
 		tankSteering = true
-		maxRPM = 1000
 		trackLength = -28
 	}
 	MODULE
@@ -137,10 +135,5 @@
 			name = Arrow
 			when = 4
 		}
-	}
-	MODULE
-	{
-		name = KSPWheelDebug
-		wheelIndex = 0
 	}
 }
