--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSurface.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSurface.cfg
@@ -8,10 +8,7 @@
 	-MODULE[KFWheel]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
-	@MODULE[TweakScale]
-	{
-		@type = KSPWheelTrackSmall
-	}
+	-MODULE[TweakScale]{}
 	
 	MODULE
 	{
@@ -34,9 +31,10 @@
 		}
 		suspensionTarget = 0.5
 		boundsColliderName = Bounds
-		loadRating = 0.1
+		loadRating = 1
 		minLoadRating = 0.1
-		maxLoadRating = 5
+		maxLoadRating = 1.5
+		maxSpeed = 23.5
 	}
 	MODULE
 	{
@@ -77,9 +75,10 @@
 	{
 		name = KSPWheelTracks
 		wheelIndex = 0
-		maxMotorTorque = 1
-		resourceAmount = 0.25
-		throttleResponse = 2
+		motorPower = 0.11
+		maxMotorTorque = 0.72
+		maxRPM = 1400
+		gearRatio = 1
 		tankSteering = true
 		trackLength = -10
 		trackDir = 1
@@ -88,10 +87,5 @@
 	{
 		name = KSPWheelDamage
 		impactTolerance = 100
-	}
-	MODULE
-	{
-		name = KSPWheelDebug
-		wheelIndex = 1
 	}
 }
