--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelLarge.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelLarge.cfg
@@ -6,10 +6,7 @@
 	-MODULE[KFSuspension]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
-	@MODULE[TweakScale]
-	{
-		@type = KSPWheelLargeWheel
-	}
+	-MODULE[TweakScale]{}
 	MODULE
 	{
 		name = KSPWheelBase
@@ -20,9 +17,10 @@
 		suspensionTravel = 1.15
 		suspensionTarget = 0.35
 		boundsColliderName = Bounds
-		loadRating = 10
+		loadRating = 8
 		minLoadRating = 1
-		maxLoadRating = 20
+		maxLoadRating = 25
+		maxSpeed = 43.5
 	}
 	MODULE
 	{
@@ -43,15 +41,14 @@
 		steeringName = TrackSteering
 		maxSteeringAngle = 40
 		steeringAxis = 0, 0, 1
-		steeringResponse = 10
 	}
 	MODULE
 	{
 		name = KSPWheelMotor
-		maxMotorTorque = 5
-		motorPower = 1
-		maxRPM = 2500
-		gearRatio = 4
+		maxMotorTorque = 172
+		motorPower = 5.5
+		maxRPM = 300
+		gearRatio = 1
 	}
 	MODULE
 	{
@@ -63,9 +60,5 @@
 	{
 		name = KSPWheelDamage
 		impactTolerance = 100
-	}
-	MODULE
-	{
-		name = KSPWheelDebug
 	}
 }
