--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelMedium.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelMedium.cfg
@@ -6,10 +6,7 @@
 	-MODULE[KFSuspension]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
-	@MODULE[TweakScale]
-	{
-		@type = KSPWheelMediumWheel
-	}
+	-MODULE[TweakScale]{}
 	MODULE
 	{
 		name = KSPWheelBase
@@ -20,9 +17,10 @@
 		suspensionTravel = 0.68
 		suspensionTarget = 0.25
 		boundsColliderName = Bounds
-		loadRating = 2
-		minLoadRating = 0.5
-		maxLoadRating = 10
+		loadRating = 1
+		minLoadRating = 0.1
+		maxLoadRating = 4
+		maxSpeed = 43.5
 	}
 	MODULE
 	{
@@ -48,10 +46,10 @@
 	MODULE
 	{
 		name = KSPWheelMotor
-		maxMotorTorque = 3.25
-		motorPower = 1
-		maxRPM = 2500
-		gearRatio = 8
+		maxMotorTorque = 16.65
+		motorPower = 1.5
+		maxRPM = 800
+		gearRatio = 1
 	}
 	MODULE
 	{
@@ -72,9 +70,5 @@
 			name = RepulsorSurface
 			when = 1
 		}
-	}
-	MODULE
-	{
-		name = KSPWheelDebug
 	}
 }
