--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelSmall.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelSmall.cfg
@@ -6,10 +6,7 @@
 	-MODULE[KFSuspension]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
-	@MODULE[TweakScale]
-	{
-		@type = KSPWheelSmallWheel
-	}
+	-MODULE[TweakScale]{}
 	MODULE
 	{
 		name = KSPWheelBase
@@ -22,7 +19,8 @@
 		boundsColliderName = Bounds
 		loadRating = 1
 		minLoadRating = 0.1
-		maxLoadRating = 5
+		maxLoadRating = 4
+		maxSpeed = 65
 	}
 	MODULE
 	{
@@ -48,9 +46,10 @@
 	MODULE
 	{
 		name = KSPWheelMotor
-		maxMotorTorque = 0.5
-		resourceAmount = 0.25
-		throttleResponse = 2
+		motorPower = 2.75
+		maxMotorTorque = 13.76
+		maxRPM = 1800
+		gearRatio = 1
 	}
 	MODULE
 	{
@@ -62,9 +61,5 @@
 	{
 		name = KSPWheelDamage
 		impactTolerance = 100
-	}
-	MODULE
-	{
-		name = KSPWheelDebug
 	}
 }
