--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelTiny.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-wheelTiny.cfg
@@ -8,10 +8,7 @@
 	-MODULE[KFSuspension]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
-	@MODULE[TweakScale]
-	{
-		@type = KSPWheelSmallWheel
-	}
+	-MODULE[TweakScale]{}
 	MODULE
 	{
 		name = KSPWheelBase
@@ -33,9 +30,10 @@
 		}
 		suspensionTarget = 0.25
 		boundsColliderName = Bounds
-		loadRating = 0.5
+		loadRating = 0.2
 		minLoadRating = 0.1
-		maxLoadRating = 2
+		maxLoadRating = 1
+		maxSpeed = 11
 	}
 	MODULE
 	{
@@ -71,20 +69,20 @@
 	{
 		name = KSPWheelMotor
 		wheelIndex = 0
-		maxMotorTorque = 1
-		resourceAmount = 0.25
-		throttleResponse = 2
-		maxRPM = 800
+		maxMotorTorque = 0.315
+		resourceAmount = 0.0175
+		maxRPM = 500
+		gearRatio = 1
 		tankSteering = true
 	}
 	MODULE
 	{
 		name = KSPWheelMotor
 		wheelIndex = 1
-		maxMotorTorque = 1
-		resourceAmount = 0.25
-		throttleResponse = 2
-		maxRPM = 800
+		maxMotorTorque = 0.315
+		resourceAmount = 0.0175
+		maxRPM = 500
+		gearRatio = 1
 		tankSteering = true
 	}
 	MODULE
@@ -114,9 +112,5 @@
 			name = Arrow
 			when = 4
 		}
-	}
-	MODULE
-	{
-		name = KSPWheelDebug
 	}
 }
