--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-Skid.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-Skid.cfg
@@ -47,9 +47,10 @@
 		}
 		suspensionTarget = 0.5
 		boundsColliderName = Bounds
-		loadRating = 0.1
-		minLoadRating = 0.1
-		maxLoadRating = 2.5
+		loadRating = 2.5
+		minLoadRating = 0.5
+		maxLoadRating = 10
+		maxSpeed = 23.5
 	}
 	MODULE
 	{
@@ -67,10 +68,5 @@
 	{
 		name = KSPWheelDamage
 		impactTolerance = 100
-	}
-	MODULE
-	{
-		name = KSPWheelDebug
-		wheelIndex = 0
 	}
 }
