--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSimple.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackSimple.cfg
@@ -12,10 +12,7 @@
 	-MODULE[KFConstrain]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
-	@MODULE[TweakScale]
-	{
-		@type = KSPWheelTrackMedium
-	}
+	-MODULE[TweakScale]{}
 		
 	MODULE
 	{
@@ -153,12 +150,12 @@
 	{
 		name = KSPWheelTracks
 		wheelIndex = 0
-		maxMotorTorque = 0.10
-		resourceAmount = 0.25
-		throttleResponse = 2
+		motorPower = 0.45
+		maxMotorTorque = 2.34
+		maxRPM = 1750
+		gearRatio = 1
+		trackLength = 14
 		tankSteering = true
-		maxRPM = 800
-		trackLength = -14
 	}
 	MODULE
 	{
@@ -188,6 +185,7 @@
 
 +PART[KF_TrackS]
 {
+	@name = KF_TrackS-R
 	-MODULE[FXModuleConstrainPosition]{}
 	-MODULE[KSPWheelBase]{}
 	-MODULE[KSPWheelRotation]{}
@@ -282,9 +280,10 @@
 		}
 		suspensionTarget = 0.5
 		boundsColliderName = Bounds
-		loadRating = 0.1
+		loadRating = 1
 		minLoadRating = 0.1
-		maxLoadRating = 2.5
+		maxLoadRating = 3
+		maxSpeed = 23.5
 	}
 	MODULE
 	{
@@ -324,16 +323,6 @@
 	}
 	MODULE
 	{
-		name = KSPWheelMotor
-		wheelIndex = 0
-		maxMotorTorque = 0.10
-		resourceAmount = 0.25
-		throttleResponse = 2
-		tankSteering = true
-		maxRPM = 800
-	}
-	MODULE
-	{
 		name = KSPWheelBrakes
 		wheelIndex = 2
 		maxBrakeTorque = 50
@@ -341,16 +330,19 @@
 	}
 	MODULE
 	{
-		name = KSPWheelDamage
-		impactTolerance = 100
+		name = KSPWheelTracks
+		wheelIndex = 0
+		motorPower = 0.45
+		maxMotorTorque = 2.34
+		maxRPM = 1750
+		gearRatio = 1
+		trackLength = 14
+		tankSteering = true
 	}
 	MODULE
 	{
-		name = KSPWheelTracks
-		trackLength = 14
-		manageMotor = true
-		manageBrakes = true
-		averageRPM = true
+		name = KSPWheelDamage
+		impactTolerance = 100
 	}
 	MODULE
 	{
@@ -365,10 +357,5 @@
 			name = ColliderContainerL
 			when = 1
 		}
-	}
-	MODULE
-	{
-		name = KSPWheelDebug
-		wheelIndex = 0
 	}
 }
