--- a/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackTiny.cfg
+++ b/GameData/KSPWheel/Patches/KerbalFoundries/KF-trackTiny.cfg
@@ -7,10 +7,7 @@
 	-MODULE[KFWheel]{}
 	-MODULE[KFDustFX]{}
 	-MODULE[KFPrecisionMode]{}
-	@MODULE[TweakScale]
-	{
-		@type = KSPWheelTrackSmall
-	}
+	-MODULE[TweakScale]{}
 	
 	MODULE
 	{
@@ -49,9 +46,10 @@
 		}
 		suspensionTarget = 0.5
 		boundsColliderName = Bounds
-		loadRating = 0.1
+		loadRating = 1
 		minLoadRating = 0.1
-		maxLoadRating = 2.5
+		maxLoadRating = 3
+		maxSpeed = 11
 	}
 	MODULE
 	{
@@ -98,9 +96,10 @@
 	{
 		name = KSPWheelTracks
 		wheelIndex = 0
-		maxMotorTorque = 0.10
-		resourceAmount = 0.25
-		throttleResponse = 2
+		motorPower = 0.11
+		maxMotorTorque = 1.98
+		maxRPM = 500
+		gearRatio = 1
 		tankSteering = true
 		trackLength = 14
 	}
@@ -108,10 +107,5 @@
 	{
 		name = KSPWheelDamage
 		impactTolerance = 100
-	}
-	MODULE
-	{
-		name = KSPWheelDebug
-		wheelIndex = 0
 	}
 }
