* More work on dust-effects.   * Add per-vessel dust-camera, setup as a vessel-module; needs testing, may need events for vessel-changed/undock/etc   * remove manual per-part dust activation toggles; use global game-settings toggle   * Add setting to enable/disable dust camera (when disabled, use biome-lookup map)

--- a/VSProject/KSPWheel/KSPWheel.csproj
+++ b/VSProject/KSPWheel/KSPWheel.csproj
@@ -82,6 +82,7 @@
     <Compile Include="PartModules\KSPWheelTransformRemoval.cs" />
     <Compile Include="PartModules\Utils.cs" />
     <Compile Include="PartModules\WheelAnimationHandler.cs" />
+    <Compile Include="VesselModules\KSPWheelDustCamera.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Properties\" />
