zero-suspension stuff is working, * needs lots more testing * neeeds some centralized handler for resetting other-collider physics materials when wheels are no longer in contact. * investigate only updating other collider physics material on bump-stop collision? (sadly forces are calced prior to the event callback, too late to fix drag/friction on the first tick of collision)

--- a/VSProject/KSPWheel/KSPWheel.csproj
+++ b/VSProject/KSPWheel/KSPWheel.csproj
@@ -63,6 +63,7 @@
     <Compile Include="PartModules\KSPWheelBase.cs" />
     <Compile Include="PartModules\KSPWheelBogey.cs" />
     <Compile Include="PartModules\KSPWheelBrakes.cs" />
+    <Compile Include="PartModules\KSPWheelCollisionData.cs" />
     <Compile Include="PartModules\KSPWheelDamage.cs" />
     <Compile Include="PartModules\KSPWheelDebugOld.cs" />
     <Compile Include="PartModules\KSPWheelDebug.cs" />
