--- a/VSProject/KSPWheel/KSPWheel.csproj
+++ b/VSProject/KSPWheel/KSPWheel.csproj
@@ -60,9 +60,11 @@
     <Compile Include="Component\KSPWheelComponent.cs" />
     <Compile Include="Component\KSPWheelFrictionCurve.cs" />
     <Compile Include="PartModules\KSPWheelAdjustableGear.cs" />
+    <Compile Include="PartModules\KSPWheelAdjustableGear2.cs" />
     <Compile Include="PartModules\KSPWheelBase.cs" />
     <Compile Include="PartModules\KSPWheelBogey.cs" />
     <Compile Include="PartModules\KSPWheelBrakes.cs" />
+    <Compile Include="PartModules\KSPWheelConstraints.cs" />
     <Compile Include="PartModules\KSPWheelDamage.cs" />
     <Compile Include="PartModules\KSPWheelDebug.cs" />
     <Compile Include="PartModules\KSPWheelDeployment.cs" />
