minor bit of work on stock wheel patches

--- a/GameDataDisabled/Patches/Stock/Stock-wheel-large.cfg
+++ b/GameDataDisabled/Patches/Stock/Stock-wheel-large.cfg
@@ -19,6 +19,7 @@
 		loadRating = 1.5
 		minLoadRating = 0.25
 		maxLoadRating = 3
+		maxSpeed = 64
 		groundHeightOffset = 0.78
 	}
 	MODULE
@@ -44,8 +45,8 @@
 	MODULE
 	{
 		name = KSPWheelMotor
-		maxMotorTorque = 20
-		resourceAmount = 3.5
+		maxMotorTorque = 1.6
+		maxRPM = 1050
 	}
 	MODULE
 	{
