--- a/GameDataDisabled/Patches/Stock/Stock-wheel-medium.cfg
+++ b/GameDataDisabled/Patches/Stock/Stock-wheel-medium.cfg
@@ -45,8 +45,8 @@
 	MODULE
 	{
 		name = KSPWheelMotor
-		maxMotorTorque = 5
-		resourceAmount = 2.5
+		maxMotorTorque = 1.09
+		maxRPM = 1100
 	}
 	MODULE
 	{
