--- a/GameDataDisabled/Patches/Stock/Stock-wheel-small.cfg
+++ b/GameDataDisabled/Patches/Stock/Stock-wheel-small.cfg
@@ -18,6 +18,7 @@
 		loadRating = 0.1
 		minLoadRating = 0.01
 		maxLoadRating = 1
+		maxSpeed = 11.5
 		groundHeightOffset = 0.175
 	}
 	MODULE
@@ -44,18 +45,17 @@
 	MODULE
 	{
 		name = KSPWheelMotor
-		maxMotorTorque = 0.25
-		maxRPM = 360
+		maxMotorTorque = 1.23
+		maxRPM = 650
 	}
 	MODULE
 	{
 		name = KSPWheelBrakes
-		maxBrakeTorque = 12
+		maxBrakeTorque = 2
 	}
 	MODULE
 	{
 		name = KSPWheelDamage
-		impactTolerance = 100
 		wheelName = wheel
 		bustedWheelName = bustedwheel
 	}
