--- a/GameDataDisabled/Patches/Stock/Stock-wheel-xlarge.cfg
+++ b/GameDataDisabled/Patches/Stock/Stock-wheel-xlarge.cfg
@@ -18,6 +18,7 @@
 		loadRating = 4
 		minLoadRating = 0.5
 		maxLoadRating = 10
+		maxSpeed = 23.5
 		groundHeightOffset = 1.75
 	}
 	MODULE
@@ -37,8 +38,8 @@
 	{
 		name = KSPWheelMotor
 		tankSteering = true
-		maxMotorTorque = 50
-		resourceAmount = 5
+		maxMotorTorque = 89
+		maxRPM = 225
 	}
 	MODULE
 	{
