--- a/UnityProject/UnityProject.CSharp.csproj
+++ b/UnityProject/UnityProject.CSharp.csproj
@@ -76,6 +76,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Scripts\KSPFrictionCurve.cs" />
+    <Compile Include="Assets\Scripts\KSPWheelAutoLevel.cs" />
     <Compile Include="Assets\Scripts\KSPWheelCollider.cs" />
     <Compile Include="Assets\Scripts\KSPWheelComponent.cs" />
     <Compile Include="Assets\Scripts\KSPWheelFrictionCurve.cs" />
