--- a/VSProject/KSPWheel/KSPWheel.csproj
+++ b/VSProject/KSPWheel/KSPWheel.csproj
@@ -76,6 +76,7 @@
     <Compile Include="PartModules\KSPWheelDebug.cs" />
     <Compile Include="PartModules\KSPWheelDeployment.cs" />
     <Compile Include="PartModules\KSPWheelDustEffects.cs" />
+    <Compile Include="PartModules\KSPWheelExtension.cs" />
     <Compile Include="PartModules\KSPWheelMotor.cs" />
     <Compile Include="PartModules\KSPWheelAnimationState.cs" />
     <Compile Include="PartModules\KSPWheelRepulsor.cs" />
